Pulled all imgs

--- a/index.html
+++ b/index.html
@@ -462,6 +462,7 @@
           </div>
           <div class="group25">
             <div class="rectangle8">
+                    <img class="rectangle8" src="img/rectangle-8 1.png"/>
             </div>
             <img class="background" src="img/background.png"/>
             <img class="logo" src="img/logo.png"/>
@@ -606,6 +607,7 @@
             USE CASES
           </div>
           <div class="rectangle15">
+              <img src="img/rectangle-15.png" alt="#">
           </div>
           <div class="ecommerce">
             eCommerce
@@ -629,11 +631,11 @@
             Drone Delivery
           </div>
           <img class="line2" src="img/line-2@2x.png"/>
-          <img class="line2copy" src="img/line-2-copy@2x.png"/>
-          <img class="line2copy2" src="img/line-2-copy-2@2x.png"/>
-          <img class="line2copy3" src="img/line-2-copy-3@2x.png"/>
-          <img class="line2copy4" src="img/line-2-copy-4@2x.png"/>
-          <img class="line2copy5" src="img/line-2-copy-5@2x.png"/>
+          <img class="line2copy" src="img/line-2@2x.png"/>
+          <img class="line2copy2" src="img/line-2@2x.png"/>
+          <img class="line2copy3" src="img/line-2@2x.png"/>
+          <img class="line2copy4" src="img/line-2@2x.png"/>
+          <img class="line2copy5" src="img/line-2@2x.png"/>
           <div class="rectangle18">
           </div>
           <div class="learnhowlocationw">
@@ -675,7 +677,7 @@
             <img class="rectangle5" src="img/rectangle-5 7@2x.png"/>
           </div>
           <img class="smartcontractgraphics" src="img/smartcontractgraphics.png"/>
-          <img class="group51" src="img/group-5.svg"/>
+          <img class="group51" src="img/group-5.png"/>
           <div class="readaboutitonour">
             Read about it on our white paper by downloading the pdf.
           </div>
@@ -690,7 +692,7 @@
             </div>
             <img class="line6" src="img/line-6 1@2x.png"/>
           </div>
-          <img class="rectangle19" src="img/rectangle-19.png"/>
+          <!-- <img class="rectangle19" src="img/rectangle-19.png"/> -->
           <div class="accordingtoarecen">
             According to a recent study released by Comcast, more than 30% of Americans have had a package stolen from their porch or doorstep. As the market share of eCommerce continues to grow, this problem will only become more prevalent. By utilizing the XYO Network and XYO Tokens, companies like Amazon and UPS can offer, as a premium service, an independently confirmed ledger to track every step of a shipment’s progress, starting at the fulfillment center and ending with the package’s secure delivery within the customer’s home.
           </div>
