SASS Adjustments, classes and positions

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="homepage">
         <div style="width: 1440px; height: 100%; position:relative; margin:auto;">
-          <img class="bitmap" src="img/bitmap.png"/>
+          <!-- <img class="bitmap" src="img/bitmap.png"/> -->
           <img class="rectangle" src="img/rectangle.png"/>
           <div class="lot">
             (LoT)
@@ -133,7 +133,7 @@
           </div>
           <div class="group9">
             <img class="oval6" src="img/oval-6@2x.png"/>
-            <img class="xyoicon" src="img/xyo-icon 1.svg"/>
+            <img class="xyoicon" src="img/xyo-icon 1.png"/>
           </div>
           <img class="rectangle7" src="img/rectangle-7.png"/>
           <img class="oval2" src="img/oval-2.png"/>
@@ -216,7 +216,7 @@
           <img class="icobench" src="img/icobench.png"/>
           <img class="logofull" src="img/logo-full.png"/>
           <img class="icoalert" src="img/ico-alert.png"/>
-          <img class="coinschedule125c0d39" src="img/coinschedule.png"/>
+          <img class="coinschedule125c0d39" src="img/coinschedule1.png"/>
           <img class="group21" src="img/icorating.png"/>
           <img class="group1" src="img/icobazar.png"/>
           <img class="a5a43b44b80557a000178d5d3icowatchlist" src="img/icowatchlist.png"/>
@@ -368,7 +368,7 @@
                   <img class="a1gsqrgyrhj9acbwv9uj23a" src="img/1gsqrgyrhj9a-cbwv9uj23a.png"/>
                 </div>
               </div>
-              <img class="bitmap" src="img/bitmap 1@2x.png"/>
+              <img class="bitmap" src="img/bitmap 2@2x.png"/>
               <div class="anupdatefromourm">
                 An Update From Our Mission
                 <br/>
