SASS Positioning and Formatting

--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
           <div class="rectangle20">
           </div>
           <img class="rectangle3" src="img/rectangle-3@2x.png"/>
+          <a href="https://xyo.network/">
           <img class="xyonetworklogomed" src="img/xyo-network-logo-med@2x.png"/>
+            </a>
           <img class="xyoicon" src="img/xyo-icon@2x.png"/>
           <div class="getxyotokens">
             GET XYO TOKENS
@@ -174,8 +176,8 @@
             <div class="rectangle9">
             </div>
             <img class="rectangle9copy" src="img/rectangle-9-copy 1@2x.png"/>
-            <img class="angledown" src="img/angle-down 1@2x.png"/>
-            <img class="angledowncopy" src="img/angle-down-copy@2x.png"/>
+            <img class="angledown" src="img/angle-left@2x.png"/>
+            <img class="angledowncopy" src="img/angle-right@2x.png"/>
           </div>
           <img class="fill1" src="img/fill-1 1@2x.png"/>
           <img class="ovalcopy3" src="img/oval-copy-3.png"/>
@@ -208,7 +210,7 @@
             </div>
           </div>
           <div class="group13">
-            <img src="img/icodrops@2x.png" alt="#">
+            <img src="img/icodrops@2x.png" alt="#" style="height: 30px;">
             <!-- <img class="fill1" src="img/fill-1 2@2x.png"/>
             <img class="fill4" src="img/fill-4@2x.png"/>
             <img class="fill6" src="img/fill-6@2x.png"/> -->
@@ -325,10 +327,7 @@
             <br/>
             A TRUE STORY
           </div>
-          <div class="rectangle12">
-          </div>
-          <div class="rectangle121">
-          </div>
+          
           <div class="group7">
             <img class="oval3" src="img/group-4-cube-copy@2x.png"/>
             <!-- <img class="oval3" src="img/oval-3@2x.png"/>
@@ -677,7 +676,9 @@
             <img class="rectangle5" src="img/rectangle-5 7@2x.png"/>
           </div>
           <img class="smartcontractgraphics" src="img/smartcontractgraphics.png"/>
-          <img class="group51" src="img/group-5.png"/>
+              <div class="codeStack">
+                <img class="group51" src="img/group-5.png"/>
+            </div>
           <div class="readaboutitonour">
             Read about it on our white paper by downloading the pdf.
           </div>
@@ -688,7 +689,8 @@
               SUBMIT
             </div>
             <div class="youremailhere">
-              YOUR EMAIL HERE
+                <input type="YOUR EMAIL HERE">
+              
             </div>
             <img class="line6" src="img/line-6 1@2x.png"/>
           </div>
