--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 <body>
     <div class="homepage">
         <div style="width: 1440px; height: 100%; position:relative; margin:auto;">
-          <!-- <img class="bitmap" src="img/bitmap.png"/> -->
           <img class="rectangle" src="img/rectangle.png"/>
           <div class="lot">
             (LoT)
@@ -211,9 +210,6 @@
           </div>
           <div class="group13">
             <img src="img/icodrops@2x.png" alt="#" style="height: 30px;">
-            <!-- <img class="fill1" src="img/fill-1 2@2x.png"/>
-            <img class="fill4" src="img/fill-4@2x.png"/>
-            <img class="fill6" src="img/fill-6@2x.png"/> -->
           </div>
           <img class="icobench" src="img/icobench.png"/>
           <img class="logofull" src="img/logo-full.png"/>
@@ -317,9 +313,8 @@
             XY now has over 1 million location beacon devices circulating in the world. In just a few years, we’ve created the single largest network of Bluetooth &amp; GPS devices in the world.
           </div>
           <img class="group4" src="img/group-4-cube.png"/>
-          <!-- <img class="group4" src="img/group-4.svg"/>
-          <img class="group4copy" src="img/group-4-copy.svg"/>
-          <img class="group4copy3" src="img/group-4-copy-3@2x.png"/> -->
+          <img class="group4copy" src="img/group-4-cube-copy.png"/>
+          <img class="group4copy3" src="img/group-4-cube-copy-3@2x.png"/>
           <div class="blockchaintechand">
             BLOCKCHAIN TECH AND
             <br/>
@@ -329,20 +324,16 @@
           </div>
           
           <div class="group7">
-            <img class="oval3" src="img/group-4-cube-copy@2x.png"/>
-            <!-- <img class="oval3" src="img/oval-3@2x.png"/>
-            <img class="oval31" src="img/oval-3 1@2x.png"/> -->
+            <img class="oval3" src="img/group-7-oval@2x.png"/>
           </div>
           <div class="group7copy2">
-            <img class="oval3" src="img/group-4-cube-copy-3@2x.png"/>
-            <!-- <img class="oval3" src="img/oval-3 2@2x.png"/>
-            <img class="oval31" src="img/oval-3 3@2x.png"/> -->
+            <img class="oval3" src="img/group-7-oval@2x.png"/>
           </div>
           <div class="group5">
-            <img class="oval2" src="img/oval-2 5@2x.png"/>
+            <!-- <img class="oval2" src="img/oval-2 5@2x.png"/>
             <img class="oval21" src="img/oval-2 6@2x.png"/>
-            <img class="oval22" src="img/oval-2 7@2x.png"/>
-            <img class="oval23" src="img/oval-2 8@2x.png"/>
+            <img class="oval22" src="img/oval-2 7@2x.png"/> -->
+            <img class="oval23" src="img/group5-circle@2x.png"/>
           </div>
           <div class="group37">
             <div class="inthenews">
@@ -384,9 +375,7 @@
               </div>
               <div class="group12">
                 <div class="group11">
-                  <div class="rectangle14">
-                  </div>
-                  <img class="rectangle141" src="img/rectangle-14@2x.png"/>
+                  <img class="rectangle141" src="img/rectangle-14 3@2x.png"/>
                 </div>
                 <div class="readmore">
                   READ MORE
@@ -451,8 +440,6 @@
                 </div>
               </div>
               <img class="bitmap" src="img/bitmap 2@2x.png"/>
-              <div class="rectangle14">
-              </div>
               <img class="rectangle141" src="img/rectangle-14 3@2x.png"/>
               <div class="readmore">
                 READ MORE
@@ -689,12 +676,11 @@
               SUBMIT
             </div>
             <div class="youremailhere">
-                <input type="YOUR EMAIL HERE">
-              
+                YOUR EMAIL HERE
             </div>
             <img class="line6" src="img/line-6 1@2x.png"/>
           </div>
-          <!-- <img class="rectangle19" src="img/rectangle-19.png"/> -->
+          <img class="rectangle19" src="img/rectangle-19.png"/>
           <div class="accordingtoarecen">
             According to a recent study released by Comcast, more than 30% of Americans have had a package stolen from their porch or doorstep. As the market share of eCommerce continues to grow, this problem will only become more prevalent. By utilizing the XYO Network and XYO Tokens, companies like Amazon and UPS can offer, as a premium service, an independently confirmed ledger to track every step of a shipment’s progress, starting at the fulfillment center and ending with the package’s secure delivery within the customer’s home.
           </div>
